--- a/Resource/css/style.css
+++ b/Resource/css/style.css
@@ -229,9 +229,9 @@ input[type="submit"]:active {
 
 header {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))),
-    url(img/header.jpg);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(img/header.jpg);
+    url(/Resource/css/img/header.jpg);
+  /* background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url(/Resource/css/img/header.jpg); */
   background-size: cover;
   background-position: center;
   height: 100vh;
